feat: plugin native Android

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,5 +14,5 @@
   </ion-header>
 
   <app-explore-container name="Tab 3 page"></app-explore-container>
-  <app-custom-button label="Hello world !"/>
+  <app-custom-button label="Hello world !" (click)="callEchoPlugin()"/>
 </ion-content>
